# damn-vulnerable-llm-app

./: .env.example  .gitignore  CLAUDE.md  README.md  SESSION_LOG.md  main.py  pyproject.toml
documents/: 01-store-hours.md  02-return-policy.md  03-shipping-options.md  04-order-tracking.md  05-account-management.md  06-warranty.md  07-payment-methods.md  08-contact-human-agent.md  09-privacy-summary.md  10-product-headphones.md  11-product-speaker.md  12-product-webcam.md  13-loyalty-program.md  14-subscription-cancellation.md  15-holiday-schedule.md  16-promo-secret-coupon.md  17-internal-api-keys.md  18-internal-memo-do-not-share.md  19-customer-record-sample.md  20-vendor-faq.md
static/: index.html
writeups/: 01-persona-priority-exploit.md  02-direct-instruction-override-resistance.md  03-roleplay-injection-resistance.md  04-system-prompt-extraction-resistance.md  05-fiction-framing-bypass.md  06-indirect-prompt-injection.md  07-insecure-output-handling.md
